--- a/idle/CMakeLists.txt
+++ b/idle/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.4)
 
-project(hello)
+project(idle)
 
 set(SOURCE_FILES main.c)
 
@@ -8,6 +8,6 @@ include_directories("/usr/local/include" "${PROJECT_SOURCE_DIR}/deps")
 
 link_directories("/usr/local/lib")
 
-add_executable(hello ${SOURCE_FILES})
+add_executable(idle ${SOURCE_FILES})
 
-target_link_libraries(hello "libuv.a")
+target_link_libraries(idle "libuv.a")
